--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "system-stats-collector",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "System Stats Collector",
   "main": "dist/index.js",
   "repository": "git@github.com:bunchtogether/system-stats-collector.git",
@@ -10,7 +10,7 @@
     "build": "rm -rf ./dist; flow-remove-types ./src --out-dir ./dist && flow-copy-source ./src ./dist",
     "flow-typed": "./node_modules/.bin/flow-typed install --overwrite",
     "test": "yarn lint && yarn test:js",
-    "test:js": "cross-env NODE_ENV=test jest --forceExit test",
+    "test:js": "cross-env NODE_ENV=test jest --forceExit --detectOpenHandles test",
     "lint": "npm run lint:js && npm run lint:flow",
     "lint:js": "eslint -c ./.eslintrc --no-eslintrc --fix .",
     "lint:flow": "flow --show-all-errors",
@@ -18,9 +18,7 @@
   },
   "pre-commit": [
     "lint",
-    "start-pre-commit",
-    "build",
-    "end-pre-commit"
+    "build"
   ],
   "jest": {
     "coverageDirectory": "./coverage/",
@@ -56,6 +54,6 @@
     "uuid": "^3.3.2"
   },
   "dependencies": {
-    "systeminformation": "^3.49.3"
+    "systeminformation": "^4.23.1"
   }
 }
